--- a/CrowdSpark/src/app/app.component.html
+++ b/CrowdSpark/src/app/app.component.html
@@ -1,5 +1,3 @@
-<div class="container">
-  <h1 class="text-center">¡Bienvenido a CrowdSpark!</h1>
-  <p class="text-muted">Este es un proyecto que utiliza Angular y Bootstrap.</p>
-  <button (click)="prueba()" class="btn btn-primary">Botón de prueba</button>
-</div>
+<router-outlet></router-outlet>
+
+
