Finalización de inicio de sesión
Se inicia de sesión con el debido usuario y contraseña, además se traslada a la siguiente pantalla

--- a/CrowdSpark/src/app/registro/registro.component.html
+++ b/CrowdSpark/src/app/registro/registro.component.html
@@ -1,6 +1,6 @@
 <div class="register-container">
     <div class="header">
-        <span onclick="window.location.href='inicio.html'" id="backArrow">←</span>
+        <span (click)="cambiarPantalla()" id="backArrow">←</span>
         <img src="images/marca.png" alt="Marca" class="logo">
     </div>
     <form [formGroup]="document" (ngSubmit)="onSubmit()">
