--- a/CrowdSpark/src/app/inicio/inicio.component.html
+++ b/CrowdSpark/src/app/inicio/inicio.component.html
@@ -1,19 +1,25 @@
-
 <div class="login-container">
-    <img src="..images/marca.png" alt="Marca" class="logo">
-    <form id="loginForm">
+    <img src="assets/images/marca.png" class="logo">
+
+    <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
         <div class="form-group">
             <label for="email">Correo:</label>
-            <input type="email" id="email" name="email" required>
+            <input type="email" id="email" formControlName="email" required>
         </div>
+
         <div class="form-group">
             <label for="password">Contraseña:</label>
-            <input type="password" id="password" name="password" required>
+            <input type="password" id="password" formControlName="password" required>
         </div>
+
         <button type="submit">Ingresar</button>
+
+        <div *ngIf="loginError" class="error-message">
+            {{ loginError }}
+        </div>      
+
         <a href="#" id="adminLink">Ingresar como administrador</a>
         <p>¿No tiene cuenta?</p>
-        <a href="../registro/registro.component.html">Ir a Pantalla 2</a>
         <button type="button" (click)="cambiarPantalla()">Registrarse</button>
     </form>
 </div>
