Funcionamiento de los botones de la pantalla principal
Se añade funcionamiento donde se traslada a las demás pantallas de llenado de elementos.

--- a/CrowdSpark/src/app/pantalla-principal/pantalla-principal.component.html
+++ b/CrowdSpark/src/app/pantalla-principal/pantalla-principal.component.html
@@ -3,11 +3,11 @@
     <div class="sidebar">
         <img src="images/marca.png" alt="Marca" class="logo">
         <ul class="menu">
-            <li><a href="crear-proyecto.html">Crear Proyecto</a></li>
-            <li><a href="editar-proyecto.html">Editar Proyecto</a></li>
-            <li><a href="#">Historial</a></li>
-            <li><a href="editar-usuario.html">Editar Usuario</a></li>
-            <li><a href="inicio.html">Cerrar sesión</a></li>
+            <li><a (click)="crearProyecto()">Crear Proyecto</a></li>
+            <li><a (click)="editarProyecto()">Editar Proyecto</a></li>
+            <li><a (click)="historial()">Historial</a></li>
+            <li><a (click)="editarUsuario()">Editar Usuario</a></li>
+            <li><a (click)="cerrarSesion()">Cerrar sesión</a></li>
         </ul>
     </div>
     
