--- a/CrowdSpark/src/app/editar-usuario/editar-usuario.component.html
+++ b/CrowdSpark/src/app/editar-usuario/editar-usuario.component.html
@@ -1,6 +1,6 @@
 <div class="edit-user-container">
     <div class="header">
-        <span onclick="window.location.href='pantallaPrincipal.html'" id="backArrow">←</span>
+        <span (click)="cambiarPantalla()" id="backArrow">←</span>
         <img src="images/marca.png" alt="Marca" class="logo">
     </div>
     <form id="editUserForm">
