Finalización Edición de Proyectos
Se finaliza la actualización de proyectos, solo haría falta implementar la lógica de envío de correos

--- a/CrowdSpark/src/app/crear-proyecto/crear-proyecto.component.html
+++ b/CrowdSpark/src/app/crear-proyecto/crear-proyecto.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="document" (ngSubmit)="onSubmit()">
-
+    <span (click)="cambiarPantalla()" id="backArrow">←</span>
     <div class="form-group">
         <label for="projectName">Nombre de Proyecto:</label>
         <input type="text" id="projectName" formControlName="projectName" required>
