--- a/CrowdSpark/src/app/editar-usuario/editar-usuario.component.html
+++ b/CrowdSpark/src/app/editar-usuario/editar-usuario.component.html
@@ -3,35 +3,35 @@
         <span (click)="cambiarPantalla()" id="backArrow">←</span>
         <img src="images/marca.png" alt="Marca" class="logo">
     </div>
-    <form id="editUserForm">
+    <form id="editUserForm" [formGroup]="document">
         <div class="form-group">
-            <label for="fullName">Nombre Completo:</label>
-            <input type="text" id="fullName" name="fullName" required>
+          <label for="fullName">Nombre Completo:</label>
+          <input type="text" id="fullName" name="fullName" formControlName="fullName" required>
         </div>
         <div class="form-group">
-            <label for="idNumber">Cédula:</label>
-            <input type="number" id="idNumber" name="idNumber" required>
+          <label for="idNumber">Cédula:</label>
+          <input type="number" id="idNumber" name="idNumber" formControlName="idNumber" required>
         </div>
         <div class="form-group">
-            <label for="workArea">Área de Trabajo:</label>
-            <input type="text" id="workArea" name="workArea" required>
+          <label for="workArea">Área de Trabajo:</label>
+          <input type="text" id="workArea" name="workArea" formControlName="workArea" required>
         </div>
         <div class="form-group">
-            <label for="initialAmount">Cantidad Inicial de Dinero:</label>
-            <input type="number" id="initialAmount" name="initialAmount" required>
+          <label for="initialAmount">Cantidad Inicial de Dinero:</label>
+          <input type="number" id="initialAmount" name="initialAmount" formControlName="initialAmount" required>
         </div>
         <div class="form-group">
-            <label for="phone">Teléfono:</label>
-            <input type="number" id="phone" name="phone" required>
+          <label for="phone">Teléfono:</label>
+          <input type="number" id="phone" name="phone" formControlName="phone" required>
         </div>
         <div class="form-group">
-            <label for="password">Contraseña:</label>
-            <input type="password" id="password" name="password" required>
+          <label for="password">Contraseña:</label>
+          <input type="password" id="password" name="password" formControlName="regPassword" required>
         </div>
         <div class="form-group">
-            <label for="confirmPassword">Confirmación de contraseña:</label>
-            <input type="password" id="confirmPassword" name="confirmPassword" required>
+          <label for="confirmPassword">Confirmación de contraseña:</label>
+          <input type="password" id="confirmPassword" name="confirmPassword" formControlName="confirmPassword" required>
         </div>
-        <button type="submit">Guardar Cambios</button>
+        <button type="button" (click)="updateUsuario()">Actualizar Usuario</button>
     </form>
 </div>
