--- a/CrowdSpark/src/app/inicio/inicio.component.html
+++ b/CrowdSpark/src/app/inicio/inicio.component.html
@@ -1,5 +1,5 @@
 <div class="login-container">
-    <img src="assets/images/marca.png" class="logo">
+    <img src="/images/marca.png" class="logo">
 
     <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
         <div class="form-group">
