--- a/CrowdSpark/src/app/pantalla-principal/pantalla-principal.component.css
+++ b/CrowdSpark/src/app/pantalla-principal/pantalla-principal.component.css
@@ -225,3 +225,30 @@
     margin-left: auto;
     margin-right: auto;
   }
+
+  .projects-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+  }
+  
+  .project-card {
+    width: 300px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 16px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  
+  .project-image {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+  }
+  
+  .project-title {
+    font-size: 1.5em;
+    margin-top: 8px;
+    margin-bottom: 12px;
+  }
+  
