--- a/CrowdSpark/src/app/pantalla-principal/pantalla-principal.component.html
+++ b/CrowdSpark/src/app/pantalla-principal/pantalla-principal.component.html
@@ -35,7 +35,7 @@
                 <p><strong>Fecha Límite:</strong> {{ proyecto.fechaLimite }}</p>
                 <p><strong>Monto:</strong> ${{ proyecto.monto }}</p>
                 <p><strong>Objetivo de Financiación:</strong> ${{ proyecto.objetivoFinanciacion }}</p>
-                <button (click)="donar(proyecto)">Donar</button>
+                <button (click)="verProyecto(proyecto)">Ver Proyecto</button>
             </div>
         </div>
     </div>
