--- a/CrowdSpark/src/app/registro/registro.component.html
+++ b/CrowdSpark/src/app/registro/registro.component.html
@@ -1,7 +1,7 @@
 <div class="register-container">
     <div class="header">
         <span (click)="cambiarPantalla()" id="backArrow">←</span>
-        <img src="images/marca.png" alt="Marca" class="logo">
+        <img src="images/marca.jpg" alt="Marca" class="logo">
     </div>
     <form [formGroup]="document" (ngSubmit)="onSubmit()">
         <div class="form-group">
