--- a/CrowdSpark/src/app/pantalla-principal/pantalla-principal.component.html
+++ b/CrowdSpark/src/app/pantalla-principal/pantalla-principal.component.html
@@ -1,7 +1,7 @@
 <div class="dashboard-container">
     <!-- Barra lateral izquierda -->
     <div class="sidebar">
-        <img src="images/marca.png" alt="Marca" class="logo">
+        <img src="images/marca.jpg" alt="Marca" class="logo">
         <ul class="menu">
             <li><a (click)="crearProyecto()">Crear Proyecto</a></li>
             <li><a (click)="editarProyecto()">Editar Proyecto</a></li>
