--- a/CrowdSpark/src/app/pantalla-principal/pantalla-principal.component.html
+++ b/CrowdSpark/src/app/pantalla-principal/pantalla-principal.component.html
@@ -38,5 +38,10 @@
                 <button (click)="verProyecto(proyecto)">Ver Proyecto</button>
             </div>
         </div>
+
+        <!-- Botón para ir a la página de mentor -->
+        <div class="mentor-button">
+            <button (click)="irAPaginaMentor()">Ir a Página de Mentor</button>
+        </div>
     </div>
 </div>
