--- a/CrowdSpark/src/app/events-admin/events-admin.component.html
+++ b/CrowdSpark/src/app/events-admin/events-admin.component.html
@@ -1,6 +1,6 @@
 <div class="event-admin-container">
     <h2>{{ title }}</h2>
-    <form [formGroup]="eventForm" (ngSubmit)="onCreateEvent()">
+    <form [formGroup]="eventForm" >
         
         <div class="form-group">
             <label for="eventName">Nombre del Evento:</label>
