--- a/CrowdSpark/src/app/editar-usuario/editar-usuario.component.html
+++ b/CrowdSpark/src/app/editar-usuario/editar-usuario.component.html
@@ -16,7 +16,7 @@
           <input type="text" id="workArea" name="workArea" formControlName="workArea" required>
         </div>
         <div class="form-group">
-          <label for="initialAmount">Cantidad Inicial de Dinero:</label>
+          <label for="initialAmount">Cantidad de Dinero:</label>
           <input type="number" id="initialAmount" name="initialAmount" formControlName="initialAmount" required>
         </div>
         <div class="form-group">
