--- a/CrowdSpark/src/app/usuarios-admin/usuarios-admin.component.css
+++ b/CrowdSpark/src/app/usuarios-admin/usuarios-admin.component.css
@@ -1,3 +1,54 @@
+/* user-toggle.component.css */
+
+/* Estilos para el botón */
+button {
+  width: 50px;  /* Ajusta el tamaño según sea necesario */
+  height: 50px;  /* El mismo tamaño en ancho y alto para hacerlo redondo */
+  border-radius: 50%;  /* Hace el botón redondo */
+  border: none;
+  cursor: pointer;
+  font-size: 24px;  /* Tamaño del ícono */
+  display: flex;
+  align-items: center;  /* Centra verticalmente el contenido */
+  justify-content: center;  /* Centra horizontalmente el contenido */
+  transition: background-color 0.3s ease, transform 0.1s ease, opacity 0.1s ease;
+  background: none;
+  outline: none;
+}
+
+/* Colores y estilos para el botón según el estado */
+button.active {
+  background-color: #28a745;  /* Verde para activo */
+  color: white;
+}
+
+button.inactive {
+  background-color: #dc3545;  /* Rojo para inactivo */
+  color: white;
+}
+
+button i {
+  align-items: center;  /* Centra verticalmente el contenido */
+  justify-content: center;  
+  font-size: 20px; /* Ajuste del tamaño del ícono */
+}
+
+/* Efecto visual al presionar el botón */
+button:active {
+  transform: scale(0.95);  /* Efecto de reducción de tamaño */
+  opacity: 0.7;  /* Efecto de opacidad */
+}
+
+/* Estilos para la celda de la tabla */
+td {
+  text-align: center;  /* Asegura que el contenido de la celda esté centrado */
+  vertical-align: middle;  /* Centra verticalmente el contenido de la celda */
+  padding: 0;  /* Opcional: elimina el padding para que el botón quede pegado al borde de la celda */
+}
+
+
+
+
 .user-list-container {
     max-width: 600px;
     margin: 0 auto;
@@ -10,6 +61,8 @@
 }
 
 .user-table th, .user-table td {
+  text-align: center;  /* Asegura que el contenido de la celda esté centrado */
+  vertical-align: middle;  
     padding: 10px;
     border: 1px solid #ddd;
     text-align: left;
