--- a/CrowdSpark/src/app/historial/historial.component.html
+++ b/CrowdSpark/src/app/historial/historial.component.html
@@ -2,7 +2,7 @@
     <div class="main-content">
         <!-- Sección de logo y título -->
         <div class="header-section">
-            <img src="images/marca.png" alt="Marca" class="center-logo">
+            <img src="images/marca.jpg" alt="Marca" class="center-logo">
             <h2 class="title">Historial Donaciones</h2>
         </div>
         <span (click)="cambiarPantalla()" id="backArrow">←</span>
