--- a/CrowdSpark/src/app/pantalla-principal/pantalla-principal.component.html
+++ b/CrowdSpark/src/app/pantalla-principal/pantalla-principal.component.html
@@ -7,7 +7,7 @@
             <li><a (click)="editarProyecto()">Editar Proyecto</a></li>
             <li><a (click)="historial()">Historial</a></li>
             <li><a (click)="editarUsuario()">Editar Usuario</a></li>
-            <li><a (click)="sesiones()">Sesiones Pendientes</a></li>
+            <li *ngIf="!isMentor"><a (click)="sesiones()">Sesiones Pendientes</a></li>
             <li><a (click)="cerrarSesion()">Cerrar sesión</a></li>
         </ul>
     </div>
