--- a/CrowdSpark/src/app/editar-usuario/editar-usuario.component.css
+++ b/CrowdSpark/src/app/editar-usuario/editar-usuario.component.css
@@ -225,3 +225,9 @@
     margin-left: auto;
     margin-right: auto;
   }
+
+  textarea {
+    font-size: 0.9rem;
+    width: 70%; 
+    text-align: left;
+  }
