--- a/CrowdSpark/src/app/realizar-donacion/realizar-donacion.component.html
+++ b/CrowdSpark/src/app/realizar-donacion/realizar-donacion.component.html
@@ -1,7 +1,7 @@
 <div class="donation-container">
     <div class="header">
         <span (click)="volver()" id="backArrow">←</span>
-        <img src="/images/marca.png" alt="Logo" class="logo">
+        <img src="/images/marca.jpg" alt="Logo" class="logo">
     </div>
     <form [formGroup]="donationForm" (ngSubmit)="onSubmit()">
         <h1>Donación</h1>
