--- a/CrowdSpark/src/app/crear-proyecto/crear-proyecto.component.html
+++ b/CrowdSpark/src/app/crear-proyecto/crear-proyecto.component.html
@@ -61,8 +61,8 @@
     
     <div *ngIf="showMentorCombobox" class="form-group">
         <label for="mentor">Seleccionar Mentor:</label>
-        <select id="mentor" [(ngModel)]="selectedMentor" required>
-            <option *ngFor="let mentor of mentors" [value]="mentor.nombre">{{ mentor.nombre }}</option>
+        <select id="mentor" formControlName="mentor" required>
+          <option *ngFor="let mentor of mentors" [value]="mentor.nombre">{{ mentor.nombre }}</option>
         </select>
     </div>
 
