--- a/CrowdSpark/src/app/crear-proyecto/crear-proyecto.component.html
+++ b/CrowdSpark/src/app/crear-proyecto/crear-proyecto.component.html
@@ -48,14 +48,13 @@
         <label>Imagen:</label>
     </div>
     <div class="form-group image-container">
-        <!-- Input para subir archivo, oculto visualmente -->
         <input type="file" id="uploadInput" accept="image/*" style="display: none;" (change)="uploadImage($event)">
-        <!-- Imagen de "Upload" que se usa como botón, visible solo si no hay imagen seleccionada -->
         <img *ngIf="!imagePreview" src="images/Upload.png" alt="Upload" id="uploadImage" class="upload-image" onclick="document.getElementById('uploadInput').click()">
-        <!-- Vista previa de la imagen seleccionada, visible solo si hay una imagen cargada -->
         <img *ngIf="imagePreview" [src]="imagePreview" alt="Vista previa de la imagen" class="preview-image" onclick="document.getElementById('uploadInput').click()">
     </div>
-
+    <div *ngIf="imageRequired" class="error-message">
+        La imagen es obligatoria.
+    </div>
     <!-- Botón para solicitar mentor -->
     <button type="button" (click)="solicitarMentor()">Solicitar Mentor</button>
     
