--- a/CrowdSpark/src/app/crear-proyecto/crear-proyecto.component.html
+++ b/CrowdSpark/src/app/crear-proyecto/crear-proyecto.component.html
@@ -61,7 +61,7 @@
     
     <div *ngIf="showMentorCombobox" class="form-group">
         <label for="mentor">Seleccionar Mentor:</label>
-        <select id="mentor" formControlName="mentor" required>
+        <select id="mentor" formControlName="mentor" (change)="onMentorChange($event)" required>
           <option *ngFor="let mentor of mentors" [value]="mentor.nombre">{{ mentor.nombre }}</option>
         </select>
     </div>
