--- a/CrowdSpark/src/app/stats-admin/stats-admin.component.html
+++ b/CrowdSpark/src/app/stats-admin/stats-admin.component.html
@@ -15,7 +15,11 @@
         </div>
         <div class="stat-card">
             <h3>Usuarios Activos</h3>
-            <p>{{ activeUsers }}</p>
+            <p>{{ activeUsersPercentage }}%</p>
+        </div>
+        <div class="stat-card">
+            <h3>Usuarios Mentores</h3>
+            <p>{{ mentorUsersPercentage }}%</p>
         </div>
         <div class="stat-card">
             <h3>Proyectos Completados</h3>
