--- a/CrowdSpark/src/app/events-admin/events-admin.component.html
+++ b/CrowdSpark/src/app/events-admin/events-admin.component.html
@@ -3,26 +3,26 @@
     <form [formGroup]="eventForm" >
         
         <div class="form-group">
-            <label for="eventName">Nombre del Evento:</label>
-            <input id="eventName" formControlName="eventName" required>
+            <label for="nombre">Nombre del Evento:</label>
+            <input id="nombre" formControlName="nombre" required>
         </div>
         
         <div class="form-group">
-            <label for="presentationType">Tipo de Presentación:</label>
-            <select id="presentationType" formControlName="presentationType">
+            <label for="tipo">Tipo de Presentación:</label>
+            <select id="tipo" formControlName="tipo">
                 <option value="presencial">Presencial</option>
                 <option value="virtual">Virtual</option>
             </select>
         </div>
         
         <div class="form-group">
-            <label for="participants">Registro de Participantes:</label>
-            <input type = 'number' id="participants" formControlName="participants" placeholder="Ej. 50 participantes" required>
+            <label for="participantes">Registro de Participantes:</label>
+            <input type = 'number' id="participantes" formControlName="participantes" placeholder="Ej. 50 participantes" required>
         </div>
         
         <div class="form-group">
-            <label for="materials">Material Descargable:</label>
-            <input id="materials" formControlName="materials" placeholder="Link o archivo" required>
+            <label for="materiales">Material Descargable:</label>
+            <input id="materiales" formControlName="materiales" placeholder="Link o archivo" required>
         </div>
         
         <button (click)="onSubmit()" type="submit" [disabled]="eventForm.invalid">Crear Evento</button>
