--- a/CrowdSpark/src/app/pantalla-principal/pantalla-principal.component.css
+++ b/CrowdSpark/src/app/pantalla-principal/pantalla-principal.component.css
@@ -121,6 +121,7 @@
   
   .sidebar {
     width: 250px;
+    height: 700px;
     background-color: #f4f4f4;
     border-right: 1px solid #ccc;
     padding: 20px;
@@ -140,6 +141,7 @@
     padding: 0;
     margin: 0;
     width: 100%;
+   
   }
   
   .sidebar .menu li {
